--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss-animated": "^1.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
